# miktex

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeLists2.txt  CONTRIBUTING.md  COPYING.md  Doxyfile.in  HACKING.md  LICENSE.md  README.md  README.unx  README.win  cmake_uninstall.cmake.in  gen-git-info.cmake  miktex-config.in  miktex-version.cmake  miktexstartup.ini.debug.in
.github/: stale.yml  (+2 more)
Admin/ConfigFiles/: CMakeLists.txt  amstex.ini.cmake  bibtex-x.ini.body  bibtex-x.ini.cmake  bibtex-x.ini.in  bibtexu.ini.body  bibtexu.ini.in  cont-de.ini.in  context.ini.cmake  context.ini.in  dvilualatex-dev.ini.cmake  dvilualatex.ini.cmake  dviluatex.ini.cmake  dviluatex.ini.in  dvipdfmx.ini.cmake  eplain.ini.cmake  eptex.ini.in  etex.ini.body  etex.ini.cmake  euptex.ini.in  filetypes.ini  fontinst.ini.cmake  fontinst.ini.in  formats-context.ini.body  formats.ini.body  formats.ini.cmake  formats.ini.in  frlatex.ini.body  frlatex.ini.cmake  frtex.ini.body  frtex.ini.cmake  frtex.ini.in  ftex.ini.body  ftex.ini.cmake  harflatex-dev.ini.cmake  harflatex.ini.cmake  harftex.ini.cmake  header.txt  hilatex-dev.ini.in  hilatex.ini.in  (+67 more)
Admin/ConfigFiles/unx/: log4cxx.unx.xml
Admin/ConfigFiles/win/: log4cxx.win.xml
Admin/TPM/: CMakeLists.txt  miktex-config.tpm.in  miktex-context-config.tpm.in  miktex-doc.tpm.in  miktex-lang-de.tpm.in
Admin/TPM/windows-x64/: miktex-arctrl-bin-x64.tpm.in  miktex-asymptote-bin-x64.tpm.in  miktex-autosp-bin-x64.tpm.in  miktex-axohelp-bin-x64.tpm.in  miktex-bibarts-bin-x64.tpm.in  miktex-bibtex-bin-x64.tpm.in  miktex-bibtex8bit-bin-x64.tpm.in  miktex-bin-x64.tpm.in  miktex-bzip2-bin-x64.tpm.in  miktex-cairo-bin-x64.tpm.in  miktex-chktex-bin-x64.tpm.in  miktex-cjkutils-bin-x64.tpm.in  miktex-console-bin-x64.tpm.in  miktex-context-bin-x64.tpm.in  miktex-curl-bin-x64.tpm.in  miktex-cweb-bin-x64.tpm.in  miktex-devnag-bin-x64.tpm.in  miktex-dvicopy-bin-x64.tpm.in  miktex-dvipdfmx-bin-x64.tpm.in  miktex-dvipng-bin-x64.tpm.in  miktex-dvips-bin-x64.tpm.in  miktex-dvisvgm-bin-x64.tpm.in  miktex-epstopdf-bin-x64.tpm.in  miktex-expat-bin-x64.tpm.in  miktex-findtexmf-bin-x64.tpm.in  miktex-fmt-bin-x64.tpm.in  miktex-fontconfig-bin-x64.tpm.in  miktex-fonts-bin-x64.tpm.in  miktex-freeglut-bin-x64.tpm.in  miktex-freetype2-bin-x64.tpm.in  miktex-fribidixetex-bin-x64.tpm.in  miktex-gd-bin-x64.tpm.in  (+68 more)
BuildUtilities/c4p/: CMakeLists.txt  c4p-version.h  c4p.rc  common.h  gram.output  gram.tab.c  gram.y  main.cpp  misc.cpp  output.cpp  output.h  scan.l  subrange.cpp  symtab.cpp  type.cpp
BuildUtilities/cfg/: CMakeLists.txt  cfg-version.h  cfg-version.h.in  cfg.cpp  cfg.rc  cfg.rc.in  component.cmake  version.cmake
BuildUtilities/cweb/: CMakeLists.txt  ctangle-version.h  ctangle.cmake  ctangle.rc  ctwill-refsort.cmake  ctwill-twinx.cmake  ctwill.cmake  cweave-version.h  cweave.cmake  cweave.rc  initcommon.c  initctangle.c  initctangle.cmake  initcweb.h  miktex-ctangle-version.h  miktex-ctangle.rc  miktex-ctwill-refsort-version.h  miktex-ctwill-refsort.rc  miktex-ctwill-twinx-version.h  miktex-ctwill-twinx.rc  miktex-ctwill-version.h  miktex-ctwill.rc  miktex-cweave-version.h  miktex-cweave.rc
BuildUtilities/etc/: CMakeLists.txt  bintoc.cpp  headerguard.cpp  hhc.cmd.cmake  j2000.cpp  mkdllbases.cpp  timerun.cpp  web-n.cpp
BuildUtilities/inipool/: CMakeLists.txt  inipool.cpp
BuildUtilities/md5walk/: CMakeLists.txt  md5walk-version.h  md5walk.cpp  md5walk.rc
BuildUtilities/mpc/: CMakeLists.txt  StdAfx.h  component.cmake  config.h.cmake  internal.h  mpc-version.h  mpc-version.h.in  mpc.cpp  mpc.rc  mpc.rc.in  version.cmake
BuildUtilities/padout/: CMakeLists.txt  padout.cpp
BuildUtilities/tie/: CMakeLists.txt  tie-miktex.ch
BuildUtilities/touch/: CMakeLists.txt  touch-version.h  touch.cpp  touch.rc
Documentation/: CMakeLists.txt  component.cmake  entities.ent  entities.ent.cmake  entities.ent.in  faq.xml  license.xml  local.txt  manual.xml  miktex.xml  packaging.xml  refman.xml  relnotes.xml  version.cmake  version.ent.in
Documentation/BibEntries/: latex.xml  metafontbook.xml  texbook.xml
Documentation/EnvVars/: BIBINPUTS.xml  BSTINPUTS.xml  MFINPUTS.xml  MIKTEX_EDITOR.xml  MIKTEX_REPOSITORY.xml  MIKTEX_TRACE.xml  MPINPUTS.xml  TEXINPUTS.xml  TFMFONTS.xml
Documentation/Manual/: about.xml  advanced.xml  configuring.xml  defaults.xml  envvars.xml  features.xml  files.xml  installing.xml  intro.xml  localguide.xml  preface.xml  printing.xml  programs.xml  psfonts.xml  runtimeparams.xml  tcxtables.xml  texfeatures.xml  texifying.xml  tracestreams.xml
Documentation/Options/: admin.xml  alias.xml  auxdirectory.xml  bistacksize.xml  bufsize.xml  cstyleerrors.xml  disable8bitchars.xml  disableinstaller.xml  disablepipes.xml  disablewriteeighteen.xml  dontparsefirstline.xml  enable8bitchars.xml  enableenctex.xml  enableetex.xml  enableinstaller.xml  enablemltex.xml  enablepipes.xml  enablewriteeighteen.xml  errorline.xml  extramembot.xml  extramemtop.xml  fontmax.xml  fontmemsize.xml  halferrorline.xml  haltonerror.xml  hashextra.xml  help.xml  hhelp.xml  includedirectory.xml  initialize.xml  interaction.xml  jobname.xml  jobtime.xml  ligtablesize.xml  listrepositories.xml  mainmemory.xml  maxinopen.xml  maxprintline.xml  maxstrings.xml  maxwiggle.xml  (+25 more)
Documentation/Ref/: _tlack.xml  bibtex.xml  dvicopy.xml  dvips.xml  findtexmf.xml  gftodvi.xml  initexmf.xml  luatex.xml  mf.xml  miktex-bibtex.xml  miktex-diag.xml  miktex-dvicopy.xml  miktex-dvips.xml  miktex-filesystem.xml  miktex-filetypes.xml  miktex-fndb.xml  miktex-fontmaps.xml  miktex-formats.xml  miktex-gftodvi.xml  miktex-languages.xml  miktex-links.xml  miktex-luatex.xml  miktex-mf.xml  miktex-mpost.xml  miktex-packages.xml  miktex-pdftex.xml  miktex-repositories.xml  miktex-tex.xml  miktex-tools.xml  miktex-xetex.xml  miktex.ini.xml  miktex.xml  miktexini.xml  miktexsetup.xml  mpm.xml  mpost.xml  mthelp.xml  mtprint.xml  omega.xml  pdftex.cfg.xml  (+8 more)
Documentation/Styles/: fo.xsl  html.xsl  htmlchunk.xsl  htmlhelp.xsl  htmltext.xsl  manpages.xsl  miktexhelp.css  miktexman.css
(+8319 files in other folders)
